# IMS

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  main.py  worker.py
backend/app/api/: deps.py  routes.py  ws.py
backend/app/core/: config.py  logging.py
backend/app/models/: schemas.py  sql.py
backend/app/repositories/: mongo_repo.py  redis_repo.py  sql_repo.py
backend/app/services/: alerting.py  debouncer.py  incident_service.py  insights.py  mttr.py  rate_limiter.py  realtime.py  workflow.py
backend/ims_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: fakes.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_debouncer.py  test_rca_validation.py
docs/: architecture.md  lld.md
docs/samples/: failure_scenarios.json  replay_scenarios.py
frontend/: Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  jsx.d.ts  styles.css  types.ts
frontend/src/components/: IncidentCard.tsx  Layout.tsx  RcaForm.tsx  SeverityBadge.tsx  Skeleton.tsx
frontend/src/hooks/: useIncidentStream.ts
frontend/src/pages/: DashboardPage.tsx  IncidentDetailPage.tsx
frontend/src/services/: api.ts  mockApi.ts
